k8s/web-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 4200
      targetPort: 4200
