k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web-cluster-ip-service
              servicePort: 4200
          - path: /api/
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
